--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">AndroidDEV_part1</string>
+    <string name="lay22">Lay22</string>
+    <string name="textview">TextView</string>
+    <string name="lay" />
+    <string name="Lauout2" />
+    <string name="content">Content</string>
 </resources>
