Module 2 - Commite 2.8 - Prepared   event button -   Add to card

--- a/AndroidDev_part2/src/main/res/values/strings.xml
+++ b/AndroidDev_part2/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Part2</string>
+    <string name="order">Order</string>
+    <string name="ouantity">Ouantity</string>
+    <string name="order_price">Order Price</string>
+    <string name="other_text">Other text</string>
+    <string name="todo">TODO</string>
+    <string name="select_item">Select Item</string>
+    <string name="todo1">TODO</string>
+    <string name="input_name">Input name</string>
 </resources>
