--- a/AndroidDev_part2/src/main/res/values/strings.xml
+++ b/AndroidDev_part2/src/main/res/values/strings.xml
@@ -8,4 +8,15 @@
     <string name="select_item">Select Item</string>
     <string name="todo1">TODO</string>
     <string name="input_name">Input name</string>
+    <string name="user">User:</string>
+    <string name="text">=text</string>
+    <string name="product">Product:</string>
+    <string name="text1">=text</string>
+    <string name="quantity">Quantity:</string>
+    <string name="text3">=text</string>
+    <string name="price">Price:</string>
+    <string name="text4">=text</string>
+    <string name="total_price">Total price:</string>
+    <string name="text5">=text</string>
+    <string name="todo2">TODO</string>
 </resources>
