Module 3 - Commite 3.5 - Add text for activity

--- a/AndroidDev_part3/src/main/res/values/strings.xml
+++ b/AndroidDev_part3/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="image">Image</string>
     <string name="animation">Animation</string>
     <string name="work_with_images_audio_and_video">Work with images,audio and video</string>
+    <string name="video_activity">Video activity</string>
 </resources>
