--- a/AndroidDev_part5/src/main/res/values/strings.xml
+++ b/AndroidDev_part5/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">Pizza Recipes</string>
-    <string name="title">Title</string>
-    <string name="description">Description</string>
-    <string name="todo">TODO</string>
+    <string name="description" />
+    <string name="title" />
 </resources>
