--- a/androiddev_part7/src/main/res/values/strings.xml
+++ b/androiddev_part7/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">AndroidDev_part7</string>
+    <string name="save_member">Save Member</string>
+    <string name="delete_member">Delete Member</string>
 </resources>
